# trmnl-whatsapp-list

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  env.example  nixpacks.toml
.beads/: issues.jsonl
scripts/: get-google-calendar-refresh-token.py  preview-trmnl-image-local.sh  preview-trmnl-image-public.sh  preview-trmnl-image.sh  setup-telegram-webhook.sh  show-telegram-webhook.sh  smoke-trmnl-byos.sh
src/: app.rs  calendar.rs  commands.rs  config.rs  http.rs  main.rs  messaging.rs  store.rs  telegram.rs  whatsapp.rs
