[package]
name = "trmnl-whatsapp-list"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
jiff = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
